[project]
name = "crud-sistema-agendamento"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Hoffmann",email = "edu.he.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "crud_sistema_agendamento", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
